[package]
name = "bencher"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.7"
log = "0.4.26"
# dagrs = { path = "/home/xiaolongfu/dagrs-perf/dagrs-NJU-fxl" }
futures = "0.3.31"
tokio = { version = "1.28", features = ["rt", "sync", "rt-multi-thread"] }
regex = "1.11.1"
csv = "1.3.1"
heck = "0.5.0"